bug 12423,Read user.js on startup after prefs.js is read.r=alecf